--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-certifi==2021.5.30
-chardet==4.0.0
-idna==3.2
-requests==2.25.1
-urllib3==1.26.5
+certifi~=2022.0
+chardet~=5.0
+idna~=3.0
+requests~=2.0
+urllib3~=1.0
